# Othello-v2

./: CMakeLists.txt
src/: ai.cpp  ai.h  ai.test.cpp  board.cpp  board.h  game.cpp  game.h  main.cpp  othello.cpp  othello.h  piece.h
